--- a/css/nav.css
+++ b/css/nav.css
@@ -7,17 +7,17 @@
             width: 100%;
             display: flex;
             justify-content: space-between;
-            background-color: black;
+            background-color: rgb(195,202,168);
 
         }
 
         .nav .logo {
-            width: 10vw;
-            height: 10vh;
+            width: 5vw;
+            height:10vh;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            border-radius: 50px;
+            border-radius: 10px;
         }
 
         .nav .menu {
@@ -43,7 +43,7 @@
             text-decoration: none;
             color: white;
         }
-                               
+                        
         @media screen and (max-width: 600px) {
             .nav {
                 flex-direction: column;
